[CORE-1450] Addressing SonarQube (Major) issue - fixing java:S6204 (use Stream.toList() instead of collect(Collectors.toList()))